--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.4.0"
+    "sequelize": "^6.4.0",
+    "xlsx": "^0.16.9"
   }
 }
